[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Lighting-Team"]
license = "GNU GPL v3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
regex = "1.5"
os_info = "3.0.0"
anyhow = "1.0"
sha1 = "0.10"
futures = "0.3"
zip = "0.6"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
