[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Lighting-Team"]
license = "GNU GPL v3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
sqlite = "0.30"
url = "2.2"
webbrowser = "0.8"
image = { version = "0.24", features = ["png"] }
tauri = { version = "2.10.0", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
regex = "1.5"
os_info = "3.0.0"
anyhow = "1.0"
sha1 = "0.10"
futures = "0.3"
zip = "0.6"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
fastnbt = "2"
flate2 = "1.0"
sysinfo = "0.33"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.2"
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSWindow"] }

[target."cfg(target_os = \"windows\")".dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi", "winnt", "shellapi", "winuser"] }

[target."cfg(unix)".dependencies]
nix = { version = "0.27", features = ["user"] }
